--- a/css/bc.css
+++ b/css/bc.css
@@ -76,18 +76,11 @@ justify-content: space-between;
 font-size: 1.2rem;
 }
 
-.nav-menu a:nth-child(1):hover{
+.nav-menu:nth-child(1):hover{
 cursor: pointer;
 border-bottom: 2px solid rgb(5, 116, 124);
 }
-.nav-menu a:nth-child(2):hover{
-cursor: pointer;
-border-bottom: 2px solid rgb(5, 116, 124);
-}
-.nav-menu a:nth-child(3):hover{
-cursor: pointer;
-border-bottom: 2px solid rgb(5, 116, 124);
-}
+
 
 .nav-menu :nth-child(4){
 border: 2px solid rgb(6, 135, 145);
@@ -108,7 +101,7 @@ text-align: center;
 
 .nav-menu :nth-child(4):hover{
 border: none;
-background: rgb(10, 147, 156);
+background: rgba(10, 146, 156, 0.678);
 color: black;
 border-radius: 30px;
 padding: 7px;
@@ -121,7 +114,7 @@ border-radius: 30px;
 padding: 7px;
 width: 110px;
 background: none;
-color: rgb(10, 147, 156);
+color: rgba(10, 146, 156, 0.733);
 border: 2px solid rgb(6, 116, 124);
 text-align: center;
 }
@@ -129,8 +122,8 @@ text-align: center;
 
 .nav-logo:hover{
 cursor: pointer;
-background: rgb(7, 170, 182);
-border-radius: 20px;
+background: rgba(7, 170, 182, 0.575);
+border-radius: 18px;
 color: black;
 }
 
@@ -590,7 +583,7 @@ padding: 30px;
 
 
 
-@media only screen and (max-width: 868px) {
+@media only screen and (max-width: 968px) {
 
 
 
