--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,6 +1,6 @@
 .dash{
 width: 100%;
-background-image: linear-gradient(140deg, rgba(22, 29, 46, 0.11), rgba(8, 37, 31, 0.171));
+background: black;
 }
 
 .header1 h1{
@@ -22,6 +22,7 @@ width: 100%;
 display: flex;
 align-items: center;
 justify-content: space-between;
+padding-top: 10px;
 }
 
 .burger {
@@ -84,20 +85,20 @@ transition: all 0.5s ease-in-out;
 }
 
 .back{
-width: 15%;
+width: 13%;
 display: flex;
 flex-direction: column;
 align-items: center;
 gap: 55px;
 padding-top: 50px;
 padding-bottom: 55px;
-border-radius: 20px;
-color: rgb(224, 224, 224);
-position: absolute;
+border-radius: 30px;
+color: rgba(240, 248, 255, 0.712);
+position: fixed;
 top: 65px;
 left: -100%;
 transition: 0.6s;
-background-image: linear-gradient(140deg, rgb(21, 26, 41), rgb(13, 43, 36)); 
+background-image: linear-gradient(140deg, rgb(21, 26, 41, 0.95), rgb(13, 43, 36, 0.93)); 
 text-align: left;
 font-size: 1.2rem;
 z-index: 10;
@@ -120,8 +121,9 @@ background: inherit;
 font-size: 1.2rem;
 color: rgba(5, 125, 133, 0.801);
 padding-right: 20px;
-padding-bottom: 5px;
-padding: 10px;
+padding-bottom: 15px;
+padding-top: 30px;
+padding: 15px;
 }
 
 .acc-bal{
@@ -136,16 +138,16 @@ padding: 50px;
 
 .acc-bal .bal{
 width: 30%;
-background-image: linear-gradient(140deg, rgba(23, 32, 54, 0.904), rgba(13, 56, 47, 0.726)); 
+background-image: linear-gradient(80deg, rgba(3, 49, 51, 0.4), rgba(2, 56, 44, 0.6)); 
 color: rgba(245, 245, 245, 0.836);
-border-radius: 15px;
+border-radius: 20px;
 padding: 20px;
 padding-bottom: 30px;
 }
 
 .acc-bal div img{
-width: 17%;
-opacity: 40%;
+width: 18%;
+opacity: 70%;
 }
 
 .acc-bal div p{
@@ -165,13 +167,13 @@ width: 100%;
 display: flex;
 align-items: center;
 justify-content: center;
-gap: 20px;
+gap: 10px;
 background: inherit;
-padding-bottom: 50px;
+padding: 7px;
 }
 
 .dw div{
-width: 27%;
+width: 26%;
 display: flex;
 flex-direction: column;
 align-items: center;
@@ -182,23 +184,28 @@ justify-content: center;
 display: flex;
 align-items: center;
 justify-content: center;
-width: 90%;
-padding: 20px;
-font-size: 1.5rem;
-background-image: linear-gradient(140deg,rgb(16, 61, 65),rgb(8, 73, 57)); 
-border-radius: 10px;
-color: rgb(241, 241, 241);
+width: 100%;
+padding: 17px;
+font-size: 1.2rem;
+background: rgba(0, 0, 0, 0.151);
+border: 2px solid rgb(11, 145, 179);
+border-radius: 50px;
+color: rgba(241, 241, 241, 0.548);
+}
+
+.dw div:nth-child(2) a{
+background: rgba(0, 0, 0, 0.007);
 }
 
 .help{
 width: 100%;
 display: flex;
 flex-direction: column;
-align-items: flex-start;
-justify-content: flex-start;
+align-items: center;
+justify-content: center;
 background: inherit;
-padding-bottom: 40px;
-padding-left: 40px;
+padding-top: 30px;
+text-align: center;
 }
 
 .help p{
@@ -220,17 +227,58 @@ border-bottom: 1px solid rgb(5, 160, 160);
 
 .nav-greet{
 width: 60%;
+font-size: 1rem;
 }  
+
+.burger .bar {
+display: block;
+width: 33px;
+height: 5px;
+margin: 2px;
+}
+
+.burger .bar:nth-child(1) {
+width: 34px;
+}
+
+.burger .bar:nth-child(2) {
+width: 24px;
+}
+
+.burger .bar:nth-child(3) {
+width: 10px;
+}
+
+
+.burger.active .bar:nth-child(2) {
+opacity: 0;
+}
+
+.burger.active .bar:nth-child(1) {
+transform: translateY(9px) rotate(45deg);
+width: 30px;
+}
+
+.burger.active .bar:nth-child(3) {
+transform: translateY(-9px) rotate(-45deg);
+width: 30px;
+}
 
 
 
 .yourd{
-font-size: 1rem;
+font-size: 0.9rem;
 }
 
 
 .back{
-width: 50%;
+width: 45%;
+color: rgba(240, 248, 255, 0.712);
+font-size: 1.15rem;
+}
+
+.dash .active{
+left: -4%;
 }
 
 
@@ -240,34 +288,34 @@ width: 50%;
 width: 100%;
 display: flex;
 flex-direction: column;
-gap: 10px;
 padding: 0;
 padding-top: 20px;
 padding-bottom: 20px;
 }
 .acc-bal .bal{
-width: 94%;
-
+width: 92%;
+margin-bottom: 12px;
 }
 .acc-bal .bal p{
 padding-top: 5px;
 }
 
 .acc-bal .bal h2{
-opacity: 95%;
+opacity: 90%;
 }
 
 
 .dw div{
-width: 48%;
+width: 47%;
 }
 
 .dw a{
-color: rgba(241, 241, 241, 0.89);
+color: rgba(241, 241, 241, 0.808);
+padding: 15px;
 }
 
 footer{
-    padding-top: 10px;
+padding-top: 30px;
 }
 
 }
