--- a/css/bc.css
+++ b/css/bc.css
@@ -11,6 +11,7 @@ body {
 height: 100%;
 width: 100%;
 background: rgb(0, 0, 0);
+overflow-x: hidden;
 }
 
 
@@ -634,7 +635,7 @@ padding-bottom: 55px;
 border-radius: 30px;
 color: rgba(5, 125, 133, 0.884);
 background: rgba(10, 10, 10, 0.918);
-position: absolute;
+position: fixed;
 top: 85px;
 right: -100%;
 transition: 0.6s;
@@ -712,7 +713,8 @@ font-size: 1.8rem;
 .ft p{
 color: rgb(200, 210, 211);
 padding-bottom: 30px;
-font-size: 1rem;
+font-size: 0.9rem;
+line-height: 1.4;
 } 
 
 .ft a{
@@ -801,11 +803,11 @@ padding: 10px;
 }
 
 .ts div:nth-child(2) h1{
-font-size: 2rem;
+font-size: 1.7rem;
 }
 .ts div:nth-child(2) p{
 font-size: 0.9rem;
-line-height: 1.5;
+line-height: 1.3;
 color: rgba(245, 245, 245, 0.808);
 }
 
