--- a/css/deposit-coin.css
+++ b/css/deposit-coin.css
@@ -24,7 +24,6 @@ justify-content: center;
 color: rgba(216, 213, 213, 0.774);
 padding: 10px;
 padding-top: 20px;
-padding-bottom: 40px;
 border-radius: 30px;
 margin-top: 30px;
 text-align: center;
@@ -47,16 +46,20 @@ align-items: center;
 justify-content: center;
 }
 .qr-wrap img{
-width: 80%;
+width: 55%;
+margin-bottom: 20px;
+opacity: 80%;
+border-radius: 15px;
 }
 
 .qr-wrap input{
-width: 70%;
+width: 90%;
 background: transparent;
 color: rgba(245, 245, 245, 0.534);
 border-radius: 20px;
 padding: 5px;
 border: 2px solid rgba(4, 119, 119, 0.568);
+text-align: center;
 }
 
 .copy1{
@@ -92,6 +95,10 @@ right: -1%;
 .container{
 width: 95%;
 }       
+
+footer{
+padding-top: 30px;
+}
 
 
 }
